# DIHi-Cheers

./: CMakeLists.txt  README.md
DIHi Cheers/: #auto_saved_files#  DIHi Cheers.kicad_sch  ~DIHi Cheers.kicad_sch.lck
Schematics/: DIHi Cheers.kicad_prl  DIHi Cheers.kicad_pro  DIHi Cheers.kicad_sch
build_uf2/: Pico_Game_Controller.uf2
src/: CMakeLists.txt  controller_config.h  pico_game_controller.c  usb_descriptors.h
